--- a/src/styles.css
+++ b/src/styles.css
@@ -1,33 +1,37 @@
-/* You can add global styles to this file, and also import other style files */
+/* Margen de espacio cuerpo - Con el pie de pagina*/
+body {
+  padding-bottom: 50px;
+}
 
-.main-container{
-    margin-top: 20px;
+/* Margen de espacio Top  */
+.main-container {
+  margin-top: 20px;
 }
 
 .animated {
-    -webkit-animation-duration: 1s;
-    animation-duration: 1s;
-    -webkit-animation-fill-mode: both;
-    animation-fill-mode: both;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+.fast {
+  -webkit-animation-duration: 0.4s;
+  animation-duration: 0.4s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
   }
-  
-  .fast {
-    -webkit-animation-duration: 0.4s;
-    animation-duration: 0.4s;
-    -webkit-animation-fill-mode: both;
-    animation-fill-mode: both;
+
+  to {
+    opacity: 1;
   }
-  
-  @keyframes fadeIn {
-    from {
-      opacity: 0;
-    }
-  
-    to {
-      opacity: 1;
-    }
-  }
-  
-  .fadeIn {
-    animation-name: fadeIn;
-  }
+}
+
+.fadeIn {
+  animation-name: fadeIn;
+}
