--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,7 +1,6 @@
 <h1> Buscando: <small> {{keyword}} </small> </h1>
 <hr>
 
-
 <div class="row animated fadeIn fast" *ngIf="heroes.length == 0">
     <div class="col-md-12">
         <div class="alert alert-info" role="alert">
@@ -12,34 +11,5 @@
 
 
 <div class="row row-cols-1 row-cols-md-3 g-4">
-    <div class="col" *ngFor="let heroe of heroes; let i=index">
-        <div class="card h-100">
-            <!--  animated fadeIn fast -->
-            <img class="card-img-top animated fadeIn fast" [src]="heroe.img" [alt]="heroe.nombre">
-            <div class="card-body">
-                <h5 class="card-title"> {{ heroe.nombre }}</h5>
-                <p class="card-text">{{ heroe.bio }}</p>
-            </div>
-            <div class="card-footer">
-                <small class="text-body-secondary"> {{ heroe.aparicion }}</small>
-            </div>
-
-            <button (click)="verHeroe(i)" type="button" class="btn btn-outline-primary btn-block">
-                <h5>Ver más...</h5>
-            </button>
-
-            <!--
-            <a href="#" class="btn btn-outline-primary">
-                <h5>
-                    Ver más link...
-                </h5>
-            </a>
-            -->
-
-            <!--
-            <a [routerLink]="['/heroe',i]" class="btn btn-outline-primary"> Ver más link... </a>-->
-
-        </div>
-    </div>
-
+    <app-heroe-card [heroeInput]="heroe" [heroeIndex]="i" *ngFor="let heroe of heroes; let i=index"></app-heroe-card>
 </div>
