--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -2,6 +2,7 @@
 <hr>
 <div class="row row-cols-1 row-cols-md-3 g-4">
     <!-- *ngFor="let heroe of heroes; let i=index"  -->
-    <app-heroe-card [heroeInput]="heroe" [heroeIndex]="i" *ngFor="let heroe of heroes; let i=index"></app-heroe-card>
-
+    <app-heroe-card (heroeSelected)="verHeroe( $event )" [heroeInput]="heroe" [heroeIndex]="heroe.id"
+        *ngFor="let heroe of heroes;">
+    </app-heroe-card>
 </div>
