--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -11,5 +11,5 @@
 
 
 <div class="row row-cols-1 row-cols-md-3 g-4">
-    <app-heroe-card [heroeInput]="heroe" [heroeIndex]="i" *ngFor="let heroe of heroes; let i=index"></app-heroe-card>
+    <app-heroe-card [heroeInput]="heroe" [heroeIndex]="heroe.id" *ngFor="let heroe of heroes"></app-heroe-card>
 </div>
